@@ -1,3 +1,8 @@
+2002-12-26  Manu B  <manubee@users.sourceforge.net>
+	* include/winui.h (CSingleInstance): New class.
+	(CChrono): All members become inline.
+	(SetName): Removed.
+ 
 2002-12-21  Manu B  <manubee@users.sourceforge.net>
 	
 	* include/winui.h: Rely on MinGW headers.
